# dfdpy

./: README.md  demo.ipynb  dfdpy.code-workspace  pyproject.toml  viewer.py
dfdpy/: print.py  python.py
tests/: test_dfd_python.py  test_dfdpy.py
