[tool.poetry]
name = "dfdpy"
version = "0.1.0"
description = ""
authors = ["Inoue Akimitsu <inoue.akimitsu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
ipykernel = "^6.29.5"
streamlit = "^1.36.0"
streamlit-mermaid = "^0.2.0"
streamlit-monaco = "^0.1.3"

[tool.poetry.dev-dependencies]
# pytest = "^5.2"
autopep8 = "^1.7.0"
pylama = "^8.4.1"
pydocstyle = "^6.1.1"
flake8 = "^5.0.4"
pylint = "^2.15.0"

[tool.poetry.group.dev.dependencies]
# pytest = "^7.1.3"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
